<resources>
    <string name="app_name">Joker</string>

    // New file
    //lines to be added are below
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="resetPass">Reset Password</string>
    <!--    for registration -->
    <string name="forgot_password">Forgot Password</string>
    <string name="not_registered">Don\'t have an account?</string>
    <string name="here"> here</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered">Already Registered? Click here to</string>
    <string name="welcome_user">Welcome User</string>


</resources>
